[package]
name = "qrwatermark"
version = "1.0.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "qrwatermark"

[dependencies]
ext-php-rs = "*"
qrwatermark = { path = "./../qrwatermark", version = "1.0.1" }

[profile.release]
panic = "abort"
strip = true
lto = "fat"
opt-level = "z"
codegen-units = 1
